<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Popular Movies</string>
    <string name="sort_by">Sort</string>
    <string name="dialog_sort_title">Sort by</string>
    <string name="movie_poster">Movie Poster</string>

    <string name="activity_detail_title">Movie detail</string>

    <string name="error_no_movies_found">No movies found</string>
    <string name="error_getting_data">Loading data.\nMake sure you have active internet connection.</string>
    <string name="error_server_error">Server error!</string>

    <string name="out_of_ten">/10</string>
    <string name="votes">votes</string>

    <string name="poster_size">w342</string>
    <string name="backdrop_size">w780</string>
    <string name="out_of_name">/10</string>
    <string name="read_more">READ MORE</string>

    <string-array name="sort_by_array">
        <item>Most popular</item>
        <item>Highest rated</item>
        <item>My favourites</item>
    </string-array>


    <!-- SyncAdapter related -->
    <string name="sync_account_type">com.umang.popuparmovies</string>
    <string name="content_authority">com.umang.popularmovies</string>
    <string name="REVIEWS">REVIEWS</string>

    <string name="cast_and_credits"><![CDATA[cast & credits]]></string>
    <string name="tag_actors">Actors</string>
    <string name="tag_director">Director</string>
    <string name="tag_producer">Producer</string>
    <string name="tag_writer">Writer</string>
    <string name="tag_release_date">Release date</string>
    <string name="favourite_this_movie">Favourite this movie</string>

    <string name="removed_from_favourites">removed from favourites</string>
    <string name="added_to_favourites">added to favourites</string>
    <string name="error_no_favourite_movies_found">No favourite movies found</string>

    <string name="share_video">Check out \'<xliff:g id="title">%1$s</xliff:g>\' on <xliff:g id="url">%2$s</xliff:g></string>
    <string name="share_video_title">Share %1$s trailer</string>
    <string name="refreshing">Refreshing…</string>

    <string name="transition_movie_poster">Transition movie poster</string>
    <string name="three_dots">…</string>
</resources>
