<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/frag_mrm_tv_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View style="@style/ViewLineSeparator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_vertical_margin">

                <TextView
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cast_and_credits"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/tag_actors"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/frag_mrm_tv_actors"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/tag_director"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/frag_mrm_tv_director"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/tag_producer"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/frag_mrm_tv_producer"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/tag_writer"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/frag_mrm_tv_writer"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View style="@style/ViewLineSeparator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Caption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/tag_release_date"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/frag_mrm_tv_release_date"
                        style="@style/TextAppearance.AppCompat.Caption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>